<resources>
    <string name="app_name">TriviaClient</string>
    <string name="welcome_message">Start Playing Trivia!</string>
    <string name="connect_button_unpressed">Connect To Server</string>
    <string name="connect_button_pressed">Connecting To Server…</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Username</string>
    <string name="default_ip">192.168.68.107</string>
    <string name="server_ip_hint">Server IP</string>
    <string name="password_hint">Password</string>
    <string name="connection_failed">Connection to the server has failed</string>
    <string name="signup_title">Signup</string>
    <string name="email_hint">Email</string>
    <string name="greetings_message">Hello,\ </string>
    <string name="join_room_button">Join Room</string>
    <string name="create_room_button">Create Room</string>
    <string name="my_statistics_button">My Statistics</string>
    <string name="global_high_scores_button">Global High Scores</string>
    <string name="log_out_button">Log Out</string>
    <string name="personal_statistics_title">Personal Statistics</string>
    <string name="number_of_games_label">Number of games:\n</string>
    <string name="number_of_correct_answers_label">Number of correct answers:\n</string>
    <string name="number_of_wrong_answers_label">Number of wrong answers:\n</string>
    <string name="average_time_per_question_label">Average time per question:\n</string>
</resources>