<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <TextView
        android:id="@+id/textview_home_screen_title"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:text="@string/greetings_message"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/button_join_room"
        android:layout_width="208dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/join_room_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_home_screen_title" />

    <Button
        android:id="@+id/button_create_room"
        android:layout_width="208dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_room_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_join_room" />

    <Button
        android:id="@+id/button_my_statistics"
        android:layout_width="208dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_statistics_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_room" />

    <Button
        android:id="@+id/button_global_high_scores"
        android:layout_width="208dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:text="@string/global_high_scores_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_my_statistics" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="208dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:text="@string/log_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_global_high_scores" />

</androidx.constraintlayout.widget.ConstraintLayout>