<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalStatsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:text="@string/personal_statistics_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView_num_of_games"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:layout_marginBottom="500dp"
        android:text="@string/number_of_games_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_correct_answers"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:layout_marginBottom="352dp"
        android:text="@string/number_of_correct_answers_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_num_of_games"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView_wrong_answers"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:layout_marginBottom="216dp"
        android:text="@string/number_of_wrong_answers_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_correct_answers"
        app:layout_constraintVertical_bias="0.8" />


    <TextView
        android:id="@+id/textView_time_per_question"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:layout_marginBottom="104dp"
        android:text="@string/average_time_per_question_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_wrong_answers"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>